<resources>
    <string name="app_name">法宝</string>
    <!--语音视频通话的AppId-->
    <string name="agora_app_id">892995891e7947a89dda080cf1759818</string>
    <string name="profile">个人信息</string>
    <string name="feed">意见反馈</string>
    <string name="activity">法\t宝</string>
    <string name="settings">设置</string>
    <string name="action_settings">Settings</string>
    <string name="logo_text">L</string>
    <string name="email_placeholder">Email</string>
    <string name="password_placeholder">Password</string>
    <string name="forgot_password_link">Forgot Password?</string>
    <string name="confirm_password_placeholder">Confirm Password</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="or">OR</string>
    <string name="fb_icon">Facebook icon</string>
    <string name="instagram_icon">Instagram Icon</string>
    <string name="question_detail_actionBar">联系人</string>
    <string name="chat_emotion">表情</string>
    //语音消息
    <string name="normal">按住 说话</string>
    <string name="recording">松开 结束</string>
    <string name="want_to_cancle">松开手指，取消发送</string>
    <string name="shouzhishanghua">手指上滑，取消发送</string>
    <string name="tooshort">录音时间过短</string>
    <string name="toolong">录音时间过长</string>
    //底部消息类型
    <string name="service_chat_gallery">相册</string>
    <string name="service_chat_camera">拍照</string>
    <string name="chat_send">发送</string>
    <string name="all_detail">经典语录 : </string>
    <string name="detail_11">应该有最优秀的年轻人到法学院学习，这是时代的召唤。</string>
    <string name="detail_12">要回头看每一个案件，将遗憾印在脑中，它使以后的案件警钟长鸣。</string>
    <string name="detail_13">律师的世界是一个自由、宽容和博大精深的世界，充满梦想是这个世界的精髓。</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    //法律动态
    <string name="text_detail">翻着我们的照片，想念若隐若现，去年的冬天，我们笑得很甜...... —— 哎哟，不错哦!</string>
    <string name="ai_te">\u0040</string>
    <string name="wake_demo_hint">请点击“开始唤醒”后读出您在开放平台购买的唤醒词，当引擎计算得分大于您设置的门限值时，即可进行唤醒。</string>
    <string name="app_id">5bb37e54</string>

    //新闻
    <string name="news">法律新闻</string>
    <string name="loadfail">加载失败</string>
    <string name="exit">再按一次退出程序</string>
    <string name="copy_msg">已经复制链接地址到剪切板!</string>
    //语音切换
    <string name="xiaoyan">小燕 女声 青年 中英文(默认)</string>
    <string name="xiaoyu">小宇 男声 青年 中英文</string>
    <string name="hengli">亨利 男声 青年 英文</string>
    <string name="mali">玛丽 女声 青年 英文</string>
    <string name="xiaomei">小梅 女声 青年 中英文 粤语</string>
    <string name="xaioli">小莉 女声 青年 中英文 台湾普通话</string>
    <string name="xiaorong">小蓉 女声 青年 汉语 四川话</string>
    <string name="xiaokun">小坤 男声 青年 汉语 河南话</string>
    <string name="xiaoqiang">小强 男声 青年 汉语 湖南话</string>
    <string name="xiaoying">小莹 女声 青年 汉语 陕西话</string>
    <string name="xiaoxin">小新 男声 童年 汉语 普通话</string>
    <string name="nannan">楠楠 女声 童年 汉语 普通话</string>
    <string name="laosun">老孙 男声 老年 汉语普通话</string>
    <string name="cancel">取消</string>
</resources>
