<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardElevation="4dp"
    android:layout_marginTop="6dp"
    android:id="@+id/cardview2">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/detail_11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <TextView
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:text="@string/all_detail"
                android:layout_alignParentTop="true"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/all_detail_1"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="30dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginEnd="30dp"
                    android:text="@string/detail_11"/>
                <TextView
                    android:id="@+id/all_detail_2"
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="30dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginEnd="30dp"
                    android:text="@string/detail_12"/>
                <TextView
                    android:id="@+id/all_detail_3"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="30dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/detail_13"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>