<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/guillotine_background"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        style="@style/Toolbar"
        app:contentInsetStart="0dp">

        <ImageView
            android:id="@+id/guillotine_hamburger"
            style="@style/ImageView.Hamburger"
            android:src="@drawable/ic_menu" />
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.qintong.library.InsLoadingView
            android:id="@+id/loading_view"
            android:layout_height="170dp"
            android:layout_width="170dp"
            android:layout_centerInParent="true"
            android:src="@drawable/icon"
            app:status="loading"/>
    </RelativeLayout>

    <LinearLayout
        style="@style/LinearLayout.GuillotineItem"
        android:layout_marginTop="10dp">
        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_profile"/>
        <Button
            android:id="@+id/profile"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:background="@drawable/bt_selector"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>

    <LinearLayout
        style="@style/LinearLayout.GuillotineItem"
        android:layout_marginTop="20dp">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_feed" />

        <Button
            android:id="@+id/feed"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/feed"
            android:background="@drawable/bt_selector"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>

    <LinearLayout
        style="@style/LinearLayout.GuillotineItem"
        android:layout_marginTop="20dp">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_settings" />

        <Button
            android:id="@+id/settings"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:background="@drawable/bt_selector"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>

    <LinearLayout
        style="@style/LinearLayout.GuillotineItem"
        android:layout_marginTop="20dp">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/about"/>

        <Button
            android:id="@+id/about"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="关于"
            android:background="@drawable/bt_selector"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>

</LinearLayout>